--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "crypto": "^1.0.1",
     "debug": "~2.6.1",
     "dotenv": "~6.2.0",
+    "exceljs": "^4.2.1",
     "forever": "~0.15.3",
     "http": "0.0.0",
     "isobject": "~3.0.1",
@@ -65,7 +66,7 @@
     "randomstring": "~1.1.5",
     "rxjs": "^6.5.3",
     "scrypt": "~6.0.3",
-    "square-connect": "^2.20190612.0",
+    "square": "^9.1.0",
     "utils": "~0.3.1"
   },
   "devDependencies": {
