--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@sendgrid/mail": "~6.4.0",
     "@sentry/node": "~4.6.4",
+    "@types/koa-morgan": "^1.0.5",
     "aws-sdk": "~2.358.0",
     "axios": "^0.19.0",
     "body-parser": "~1.18.3",
@@ -49,6 +50,7 @@
     "koa-compose": "~4.1.0",
     "koa-compress": "~3.0.0",
     "koa-lusca": "~2.2.0",
+    "koa-morgan": "^1.0.1",
     "koa-multer": "~1.0.2",
     "koa-route": "~3.2.0",
     "koa-router": "~7.4.0",
