--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@
 node_modules
 logs/
 npm-debug*
+
+runDailyBirthdayBookingReport.log
+runTicketCountMonitor.log
+
+# Indepedent repos and whatever else
+dist/*
